--- a/sites/all/themes/mts/scss/modules/_menu.scss
+++ b/sites/all/themes/mts/scss/modules/_menu.scss
@@ -1,3 +1,16 @@
+.top-bar-wrapper {
+  // height: $topbar-height;
+}
+
+.top-bar-fixed {
+  top: -($topbar-height);
+  transition: top 0.3s;
+
+  &.visible {
+    top: 0;
+  }
+}
+
 .top-bar {
   .logo {
     max-height: 40px;
@@ -9,6 +22,22 @@
     .red {
       color: $sale-red;
     }
+  }
+}
+
+.l-header-region {
+  background: $white;
+  border-bottom: $border;
+  margin-bottom: 5px;
+  padding: 5px $page-gutter;
+  transition: top 0.3s;
+
+  &.menu-visible {
+    top: $topbar-height;
+  }
+
+  section {
+    line-height: rem-calc(26);
   }
 }
 
@@ -49,15 +78,13 @@
       display: none;
     }
   }
-}
 
-.l-header-region {
-  background: $white;
-  border-bottom: $border;
-  margin-bottom: 5px;
-  padding: 5px $page-gutter;
-
-  section {
-    line-height: rem-calc(26);
+  .l-header-region {
+    // Fixed class settings.
+    width: 100%;
+    left: 0;
+    position: fixed;
+    top: 0;
+    z-index: 99;
   }
 }
