--- a/sites/all/themes/mts/scss/mts.scss
+++ b/sites/all/themes/mts/scss/mts.scss
@@ -111,6 +111,7 @@
 // Modules
 // @import "modules/block";
 // @import "modules/button";
+@import "modules/back_to_top";
 @import "modules/cart";
 @import "modules/currency";
 @import "modules/follow";
