Small visual tweaks

--- a/sites/all/themes/mts/scss/base/_mixins.scss
+++ b/sites/all/themes/mts/scss/base/_mixins.scss
@@ -43,6 +43,12 @@
   justify-content: space-around;
 }
 
+@mixin space-around {
+  @include flex-container;
+  -webkit-justify-content: space-around;
+  justify-content: space-around;
+}
+
 // Adds borders that appear that only corners are outlined.
 @mixin corner-outline($color, $length: 30px) {
   border: 1px solid $color;
