--- a/sites/all/themes/mts/scss/layout/_header.scss
+++ b/sites/all/themes/mts/scss/layout/_header.scss
@@ -7,3 +7,12 @@
 .block-shopify-cart {
   float: right;
 }
+
+// Site message
+.block-block-4 {
+  position: absolute;
+  text-align: center;
+  width: 80%;
+  margin: 0 10%;
+  z-index: -1;
+}
