--- a/sites/all/themes/mts/scss/modules/product_list/_sort.scss
+++ b/sites/all/themes/mts/scss/modules/product_list/_sort.scss
@@ -7,9 +7,22 @@
   &.closed {
     display: none;
   }
+
+  .product-list__filter {
+    margin-left: 26px;
+
+    &.active {
+      margin-left: 0;
+    }
+  }
 }
 
 .sorts__category {
+  @include space-around;
+  flex-direction: column;
+}
+
+.sorts__button {
   display: block;
 
   & + & {
