--- a/sites/all/themes/mts/scss/base/_mixins.scss
+++ b/sites/all/themes/mts/scss/base/_mixins.scss
@@ -87,7 +87,7 @@
   "&#{$active-class}:after" {
     content: '+';
     display: inline-block;
-    font-size: rem-calc(27);
+    font-size: rem-calc($size);
     line-height: 1;
     margin-left: 7px;
     vertical-align: -#{($size/2)}%;
