Various style tweaks

--- a/sites/all/themes/mts/scss/modules/_cart.scss
+++ b/sites/all/themes/mts/scss/modules/_cart.scss
@@ -47,6 +47,10 @@
 .cart {
   @include flex-container;
   flex-grow: 1;
+
+  > div {
+    width: 100%;
+  }
 }
 
 .cart__inner {
@@ -60,10 +64,12 @@
   @include flex-container;
   align-items: center;
   flex-grow: 1;
+  font-size: rem-calc(30);
   justify-content: center;
 }
 
 .cart__products {
+  border-bottom: $border;
   flex-grow: 1;
   overflow: auto;
 }
@@ -88,8 +94,12 @@
 
 .cart__col--right {
   text-align: right;
-  padding-right: $column-gutter;
+  padding-right: ($column-gutter/2);
   flex-grow: 1;
+}
+
+.cart__remove {
+  padding-left: ($column-gutter/2);
 }
 
 .cart__quantity--add,
@@ -141,10 +151,10 @@
   opacity: 0;
   overflow: hidden;
   position: absolute;
-  right: -2px;
+  right: -15px;
   top: 30px;
   transition: opacity 0.5s;
-  width: 50vw;
+  width: 38vw;
   z-index: 100;
 
   &:before {
@@ -155,7 +165,7 @@
     display: block;
     height: 0;
     position: absolute;
-    right: 2px;
+    right: 26px;
     top: -5px;
     width: 0;
   }
@@ -168,7 +178,7 @@
     display: block;
     height: 0;
     position: absolute;
-    right: 4px;
+    right: 28px;
     top: -4px;
     width: 0;
   }
@@ -196,6 +206,7 @@
     border-bottom: $border;
     border-left: $border;
     border-right: $border;
+    font-size: rem-calc(14);
     padding: 5px 10px 10px;
     text-align: center;
   }
