Centering all taxonomy titles

--- a/sites/all/themes/mts/scss/modules/_taxonomy.scss
+++ b/sites/all/themes/mts/scss/modules/_taxonomy.scss
@@ -2,6 +2,12 @@
   display: none;
 }
 
+.page-taxonomy-term {
+  h1.title {
+    text-align: center;
+  }
+}
+
 .brand-info__title {
   text-align: center;
 
