--- a/sites/all/themes/mts/scss/modules/_menu.scss
+++ b/sites/all/themes/mts/scss/modules/_menu.scss
@@ -21,6 +21,7 @@ $admin-menu-height: 29px;
 .top-bar {
   .logo {
     max-height: 40px;
+    margin-bottom: 4px;
   }
 }
 
@@ -69,11 +70,14 @@ $admin-menu-height: 29px;
 
     a.main-menu__home {
       background-image: url(../logo.png) !important;
+      background-position: center !important;
+      background-repeat: no-repeat !important;
       background-size: contain !important;
+      border-left: $border;
+      border-right: $border;
       font-size: 0;
       height: 40px;
-      width: 89px;
-      padding: 0 !important;
+      width: 135px;
       margin-top: 7px;
     }
 
