--- a/sites/all/themes/mts/scss/modules/_taxonomy.scss
+++ b/sites/all/themes/mts/scss/modules/_taxonomy.scss
@@ -43,14 +43,21 @@
 
 .vocabulary-shopify-brands {
   .corner-outline {
+    display: flex;
+    flex-direction: row;
     padding: 5px;
   }
 
   .field-name-field-brand-image {
+    flex-shrink: 0;
     float: left;
-
-    img {
-      padding-right: $column-gutter;
-    }
   }
+
+  .taxonomy-term-description {
+    margin: 0 0 0 ($column-gutter/2);
+  }
+}
+
+.pane-taxonomy-term + .panel-separator {
+  margin: 0;
 }
