--- a/sites/all/themes/mts/scss/base/_init.scss
+++ b/sites/all/themes/mts/scss/base/_init.scss
@@ -1390,9 +1390,9 @@ $topbar-height: rem-calc(50);
 // $topbar-title-font-size: rem-calc(17);
 
 // Style the top bar dropdown elements
-$topbar-dropdown-bg: $topbar-bg-color;
+$topbar-dropdown-bg: $white;
 $topbar-dropdown-link-color: $monsoon;
-$topbar-dropdown-link-bg: $topbar-bg-color;
+$topbar-dropdown-link-bg: $topbar-dropdown-bg;
 $topbar-dropdown-link-bg-hover: $monsoon;
 // $topbar-dropdown-link-weight: $font-weight-normal;
 // $topbar-dropdown-toggle-size: 5px;
