--- a/sites/all/themes/mts/scss/base/_init.scss
+++ b/sites/all/themes/mts/scss/base/_init.scss
@@ -1395,7 +1395,7 @@ $topbar-dropdown-link-color: $monsoon;
 $topbar-dropdown-link-bg: $topbar-dropdown-bg;
 $topbar-dropdown-link-bg-hover: $monsoon;
 // $topbar-dropdown-link-weight: $font-weight-normal;
-// $topbar-dropdown-toggle-size: 5px;
+$topbar-dropdown-toggle-size: 0;
 $topbar-dropdown-toggle-color: $topbar-dropdown-link-color;
 // $topbar-dropdown-toggle-alpha: 0.4;
 $topbar-dropdown-link-color-hover: $white;
