--- a/sites/all/themes/mts/scss/modules/_product.scss
+++ b/sites/all/themes/mts/scss/modules/_product.scss
@@ -232,7 +232,7 @@
 }
 
 @media #{$medium-up} {
-  product__sidebar {
+  .product__sidebar {
     padding-right: 0;
     position: absolute;
     bottom: 0;
