--- a/sites/all/themes/mts/scss/modules/product_list/_categories.scss
+++ b/sites/all/themes/mts/scss/modules/product_list/_categories.scss
@@ -1,3 +1,5 @@
-.product-list__category {
-  @include filter-status;
+@media #{$topbar-media-query} {
+  .product-list__category {
+    @include filter-status;
+  }
 }
