--- a/sites/all/themes/mts/scss/modules/product_list/_sort.scss
+++ b/sites/all/themes/mts/scss/modules/product_list/_sort.scss
@@ -1,32 +1,43 @@
 .product-list__sorts {
-  @extend %space-between;
-  @include corner-outline($border-color);
-  margin-top: 10px;
-  padding: $column-gutter;
-
-  &.closed {
-    display: none;
-  }
-
-  .product-list__filter {
-    margin-left: 20px;
-    padding: 0;
-
-    &.active {
-      margin-left: 0;
-    }
-  }
-}
-
-.sorts__category {
-  @include space-around;
-  flex-direction: column;
+  @extend .filters;
 }
 
 .sorts__button {
-  display: block;
+  @extend .product-list__filter
+}
 
-  & + & {
-    margin-top: 8px;
+@media #{$topbar-media-query} {
+  .product-list__sorts {
+    @include space-between;
+    @include corner-outline($border-color);
+    display: none;
+    margin-top: 10px;
+    padding: $column-gutter;
+
+    &.opened {
+      display: flex;
+    }
+
+    .product-list__filter {
+      margin-left: 20px;
+      padding: 0;
+
+      &.active {
+        margin-left: 0;
+      }
+    }
+  }
+
+  .sorts__category {
+    @include space-around;
+    flex-direction: column;
+  }
+
+  .sorts__button {
+    display: block;
+
+    & + & {
+      margin-top: 8px;
+    }
   }
 }
