--- a/sites/all/themes/mts/scss/modules/_search.scss
+++ b/sites/all/themes/mts/scss/modules/_search.scss
@@ -9,15 +9,18 @@
     float: right;
     margin: 0 10px 0 0;
     overflow: hidden;
-    transition: width 0.5s;
     width: 0;
 
     input {
-      border-width: 0 0 1px;
+      background: none;
+      border: none;
       box-shadow: none;
+      display: inline-block;
       height: 1.5rem;
       margin-bottom: 0;
+      margin-left: 10px;
       padding: 0;
+      width: calc(100% - 25px);
     }
   }
 
@@ -26,15 +29,36 @@
     cursor: pointer;
     float: right;
     font-size: rem-calc(20);
+    height: 26px;
     padding-left: 15px;
   }
+  @include filter-active(31, '.opened .button--search');
 
   &.opened {
+    position: absolute;
+    right: 26px;
     width: calc(100% - 160px);
 
+    .button--search {
+      padding-left: 8px;
+
+      i {
+        display: none;
+      }
+    }
+
     .form-item-term {
-      max-width: 75%;
-      width: 300px;
+      position: absolute;
+      margin: 0 25%;
+      width: 50%;
+
+      &:before {
+        content: "\f002";
+        font: normal normal normal 14px / 1 FontAwesome;
+        font-size: inherit;
+        text-rendering: auto;
+        -webkit-font-smoothing: antialiased;
+      }
     }
   }
 }
