--- a/sites/all/themes/mts/scss/modules/product_list/_header.scss
+++ b/sites/all/themes/mts/scss/modules/product_list/_header.scss
@@ -21,7 +21,7 @@
   }
 }
 
-@media #{$medium-up} {
+@media #{$topbar-media-query} {
   .product-list__header {
     display: block;
     padding: 0;
