--- a/sites/all/themes/mts/scss/base/_init.scss
+++ b/sites/all/themes/mts/scss/base/_init.scss
@@ -1402,15 +1402,15 @@ $topbar-dropdown-link-color-hover: $white;
 
 // Set the link colors and styles for top-level nav
 $topbar-link-color: $monsoon;
-$topbar-link-color-hover: $black;
+$topbar-link-color-hover: $silver;
 $topbar-link-color-active: $topbar-link-color-hover;
 // $topbar-link-color-active-hover: $white;
 $topbar-link-weight: $font-weight-normal;
 $topbar-link-font-size: rem-calc(15);
 // $topbar-link-hover-lightness: -10%; // Darken by 10%
 $topbar-link-bg: $topbar-bg;
-$topbar-link-bg-color-hover: $topbar-link-bg;
-$topbar-link-bg-hover: $topbar-link-bg;
+$topbar-link-bg-color-hover: $monsoon;
+$topbar-link-bg-hover: $topbar-link-bg-color-hover;
 // $topbar-link-bg-active: $primary-color;
 // $topbar-link-bg-active-hover: scale-color($primary-color, $lightness: -14%);
 // $topbar-link-font-family: $body-font-family;
